<resources>
    <string name="app_name">Fytón  ¯\_(ツ)_/¯ </string>
    <string name="todo1">TODO</string>
    <string name="plants_of_caatinga_button">Plants Of Caatinga</string>
    <string name="vertical_irrigator">Vertical Plant Irrigator</string>
    <string name="caatinga_plants">Plants of Caatinga</string>
    <string name="button1">Button</string>
    <string name="textview">TextView</string>
    <string name="cactus">Cactus</string>
    <string name="details">Details</string>
    <string name="plants_of_caatinga">Plants of Caatinga</string>
    <string name="back">Back</string>
    <string name="plant_name">Plant Name</string>
    <string name="scientific_plant_name">Scientific Plant Name</string>
    <string name="create">Create</string>
    <string name="menu">Menu</string>
    <string name="previous_page">Previous Page</string>
    <string name="next_page">Next Page</string>
    <string name="page_1">Page 1</string>
    <string name="title_activity_details__plant">Details Plant</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="fyt_n">Fytón</string>
    <string name="fyt_n_b_tanica">Fytón Bôtanica</string>
    <string name="textview4">Plant Type</string>
    <string name="textview5">Plant Habitat</string>
    <string name="plant_type">Plant Type:</string>
    <string name="plant_habitat">Plant Habitat:</string>
    <string name="textview6">TextView</string>
    <string name="name_of_plant">Name of Plant</string>
    <string name="button2">Button</string>
    <string name="button3">Button</string>
    <string name="button4">Button</string>
    <string name="button5">Button</string>
    <string name="textview7">Plant Name</string>
    <string name="todo2">TODO</string>
    <string name="textview8">Plant Text</string>
    <string name="plant_text">Plant Text</string>
    <string name="Back">Back</string>
    <string name="Pagecounter">Page 1</string>
    <string name="todo">TODO</string>
    <string name="how_to_do">How to do</string>
    <string name="history">History</string>
    <string name="title_activity_history_vertical_irrigator">History_vertical_irrigator</string>
    <string name="action_settings">Settings</string>
    <string name="button">Button</string>
    <string name="the_vertical_irrigator">The Vertical Irrigator</string>
    <string name="taking_care_of_your_plant">Taking care of your plant</string>
</resources>
