<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="280dp"
        android:layout_height="345dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/going_to_caatinga_plants"
        app:layout_constraintEnd_toStartOf="@+id/guideline59"
        app:layout_constraintHorizontal_bias="0.862"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19"
        app:srcCompat="@drawable/desenhando2" />

    <Button
        android:id="@+id/going_to_caatinga_plants"
        android:layout_width="240dp"
        android:layout_height="58dp"
        android:contentDescription="@string/todo"
        android:focusable="true"
        android:onClick="caatinga_plants"
        android:text="@string/plants_of_caatinga"
        app:layout_constraintBottom_toTopOf="@+id/guideline61"
        app:layout_constraintEnd_toStartOf="@+id/guideline64"
        app:layout_constraintStart_toStartOf="@+id/guideline63"
        app:layout_constraintTop_toTopOf="@+id/guideline60"
        app:layout_constraintVertical_bias="0.423" />

    <Button
        android:id="@+id/Project_irrigator_button"
        android:layout_width="242dp"
        android:layout_height="59dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="Vertical_Irrigator"
        android:text="@string/vertical_irrigator"
        app:layout_constraintBottom_toTopOf="@+id/guideline58"
        app:layout_constraintEnd_toStartOf="@+id/guideline64"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="@+id/guideline63"
        app:layout_constraintTop_toTopOf="@+id/guideline61"
        app:layout_constraintVertical_bias="0.435" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline58"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="547dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline59"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="338dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="355dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline61"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="449dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline63"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="50dp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline64"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="313dp" />
</androidx.constraintlayout.widget.ConstraintLayout>